fixed layout issue

--- a/content/stylesheets/layout.css
+++ b/content/stylesheets/layout.css
@@ -53,9 +53,17 @@ hr {
     width: 200px;
 }
 
-.container, .header-nav {
+.container, .header-nav, .footer-nav {
     padding: 0;
     margin: 0 auto;
+}
+
+.header-nav {
+    padding-left: 10px;
+}
+
+.footer-nav {
+    padding: 10px;
 }
 
 .nav {
@@ -102,12 +110,15 @@ a.sub-menu-link.expand::after {
     transform: rotate(135deg);
 }
 
-.content {
-    background-color: rgba(0,0,0,0.7);
+.content {    
     padding: 10px 20px;
 }
 
-.header-nav, .nav {
+.content {
+    background-color: rgba(0,0,0,0.7);
+}
+
+.nav {
     width: 100%;
 }
 
@@ -173,18 +184,25 @@ a.sub-menu-link::after {
     color: #2178D1;
 }
 
+.footer {
+    background: #000000;
+    width: 100%;
+    float: left;
+    font-size: 12px;
+}
+
 @media (min-width: 768px) {
     .container, .header-nav {
         padding: 0 15px;
     }
 
-    .container, .header-nav, .nav {
+    .container, .header-nav, .nav, .footer-nav {
         width: 720px;
     }
 }
 
 @media (min-width: 992px) {
-    .container, .header-nav {
+    .container, .header-nav, .footer-nav {
         width: 970px;
     }
 
@@ -198,6 +216,7 @@ a.sub-menu-link::after {
         float: left;
         position: initial; 
         padding: 20px;
+        background-color: rgba(0,0,0,0.7);        
     }
 
     ul.menu {
@@ -235,7 +254,7 @@ a.sub-menu-link::after {
 }
 
 @media (min-width: 1200px) {
-    .container, .header-nav {
+    .container, .header-nav, .footer-nav {
         width: 1170px;
     }
 
